# state-vector-simulator

./: .gitignore  README.md  comparison_results.txt  demo_circuit_outputs.txt  paper.txt  pyproject.toml  requirements.txt
circuits/: example.json
examples/: library_usage.py
qomputing/: backend.py  circuit.py  circuit_builders.py  run.py
qomputing/engine/: __init__.py  measurements.py  statevector.py
qomputing/examples/: demo_circuits.py
qomputing/gates/: single_qubit.py
qomputing_simulator/: __init__.py  circuit.py  cli.py  simulator.py
qomputing_simulator/engine/: measurements.py  registry.py  statevector.py
qomputing_simulator/examples/: demo_circuits.py
qomputing_simulator/gates/: multi_qubit.py  two_qubit.py
scripts/: github-auth.sh  publish-to-pypi.sh
state_vector_simulator/state_vector_simulator/: __init__.py  circuit.py  cli.py  linalg.py  simulator.py  xeb.py
state_vector_simulator/state_vector_simulator/engine/: measurements.py  result.py
state_vector_simulator/state_vector_simulator/examples/: demo_circuits.py
state_vector_simulator/state_vector_simulator/gates/: __init__.py
tests/: test_parity.py
tools/: cirq_comparison.py
